# libfx2loader

./: CMakeLists.txt  Makefile  README  blinx.sh  eeprom.c  i2c.c  libfx2loader.h  misc.c  ram.c  release.sh  vendorCommands.h
firmware/: Makefile  README  app.c  defs.h  descriptors.a51
fx2cli/: CMakeLists.txt  README  main.c
fx2loader/: Makefile  main.c
include/makestuff/: libfx2loader.h
src/: eeprom.c  i2c.c  misc.c  ram.c
tests/: Makefile  main.cpp  testI2C.cpp
